--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,15 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>This is a tracking application and therefore requires access to location services</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This is a tracking application and therefore requires access to location services</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This is a tracking application and therefore requires access to location services</string>
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>location</string>
+    </array>
 </dict>
 </plist>
