--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   location: ^8.0.0
   provider: ^6.1.4
   font_awesome_flutter: ^10.7.0
+  traccar_flutter: ^1.0.2+4
+  unique_identifier: ^0.4.0
 
   component:
       path: "/Users/user/Documents/2025/Oasis-Group/component"
